First comit with remote loading

--- a/apps/clip/src/app/dashboard/dashboard.component.html
+++ b/apps/clip/src/app/dashboard/dashboard.component.html
@@ -5,13 +5,15 @@
     position="end"
     style="width: 320px; padding: 16px"
   >
-    <clip-feature-browser (widgetAdded)="addWidget($event)"></clip-feature-browser>
+    <clip-feature-browser
+      (widgetAdded)="addWidget($event)"
+    ></clip-feature-browser>
   </mat-drawer>
   <div class="grid-container">
     <button
       mat-fab
       color="primary"
-      (click)="toggleDesignMode()"
+      (click)="onToggleDesignMode()"
       style="
         position: absolute;
         bottom: 0;
@@ -26,34 +28,29 @@
     <mat-toolbar color="primary" class="design-toolbar" *ngIf="designMode">
       <span>Design Mode</span>
       <span class="flex-spacer"></span>
-      <button mat-flat-button (click)="toggleDesignMode()">Done Editing</button>
+      <button mat-flat-button (click)="onToggleDesignMode()">Done Editing</button>
       <span class="flex-spacer"></span>
       <!-- <button mat-icon-button (click)="drawer.toggle()">
         <mat-icon>add_circle</mat-icon>
       </button> -->
-      <button mat-flat-button (click)="drawer.toggle()">
-        Add Item
-      </button>
+      <button mat-flat-button (click)="drawer.toggle()">Add Item</button>
     </mat-toolbar>
+    <mat-progress-bar
+      mode="indeterminate"
+      *ngIf="isLoading"
+      style="position: absolute; top: 0; left: 0; right: 0; z-index: 100"></mat-progress-bar>
     <gridster [options]="options" class="dashboard-grid">
       <gridster-item
         class="dashboard-item"
         [item]="item"
         *ngFor="let item of dashboard"
       >
-
-      <mat-card class="dashboard-card">
-        <mat-card-content class="dashboard-card-content-container">
-          <clip-widget-proxy [featureWidget]="item['featureWidget']"></clip-widget-proxy>
-        </mat-card-content>
-      </mat-card>
-
-        <!-- <mat-card class="dashboard-card">
-          <mat-card-header>
-            <mat-card-title> Dashboard Item </mat-card-title>
+        <mat-card class="dashboard-card">
+          <mat-card-header class="dashboard-card-header">
+            <mat-card-title> {{ item['featureWidget'].widget.title }} </mat-card-title>
             <span class="flex-spacer"></span>
 
-            <button mat-icon-button color="accent" class="more-button">
+            <button mat-icon-button color="accent" class="settings-button">
               <mat-icon>settings</mat-icon>
             </button>
             <button
@@ -67,25 +64,11 @@
             </button>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content-container">
-            <div class="dashboard-card-content">
-              <span>Dashboard Item Content</span>
-              <div class="clip-progress-bar">
-                <div class="clip-progress-bar-fill" style="width: 28%"></div>
-              </div>
-              <span>Dashboard Item Content</span>
-              <div class="clip-progress-bar">
-                <div class="clip-progress-bar-fill" style="width: 28%"></div>
-              </div>
-              <span>Dashboard Item Content</span>
-              <div class="clip-progress-bar">
-                <div
-                  class="clip-progress-bar-fill"
-                  style="width: 28%; background-color: blueviolet"
-                ></div>
-              </div>
-            </div>
+            <clip-widget-proxy
+              [featureWidget]="item['featureWidget']"
+            ></clip-widget-proxy>
           </mat-card-content>
-        </mat-card> -->
+        </mat-card>
       </gridster-item>
     </gridster>
   </div>
