--- a/apps/feature-browser/src/app/feature-metric-widget/feature-metric-widget.component.html
+++ b/apps/feature-browser/src/app/feature-metric-widget/feature-metric-widget.component.html
@@ -2,4 +2,7 @@
 
 <b>Features: 22</b>
 
-<div style="width: 100%; height: 20px; background-color: aquamarine;"></div>
+<div style="width: 100%; height: 20px; background-color: rgb(70, 201, 157); margin: 4px 0;"></div>
+<div style="width: 60%; height: 20px; background-color: rgb(61, 120, 197); margin: 4px 0;"></div>
+<div style="width: 10%; height: 20px; background-color: rgb(169, 57, 235); margin: 4px 0;"></div>
+<div style="width: 80%; height: 20px; background-color: rgb(255, 127, 133); margin: 4px 0;"></div>
