--- a/apps/clip/src/app/dashboard/feature-browser/feature-browser.component.html
+++ b/apps/clip/src/app/dashboard/feature-browser/feature-browser.component.html
@@ -1,5 +1,18 @@
 <h2>Add widget</h2>
-<mat-list>
+
+<div class="feature-container" *ngFor="let feature of features$ | async">
+  <div mat-subheader>{{ feature.title }}</div>
+  <div class="feature-item" *ngFor="let widget of feature.dashboardWidgets"  (click)="addWidget({feature, widget})">
+    <div class="material-icons feature-icon">add</div>
+    <div class="feature-info">
+      <div class="feature-name">{{ widget.title }}</div>
+      <div class="feature-desc">{{ widget.description }}</div>
+    </div>
+  </div>
+</div>
+
+
+<!-- <mat-list>
   <ng-container *ngFor="let feature of features$ | async">
     <div mat-subheader>{{ feature.title }}</div>
     <mat-list-item *ngFor="let widget of feature.dashboardWidgets">
@@ -10,4 +23,4 @@
       <div matListItemLine>{{ widget.description }}</div>
     </mat-list-item>
   </ng-container>
-</mat-list>
+</mat-list> -->
