--- a/apps/feature-browser/src/app/featured-item/featured-item.component.scss
+++ b/apps/feature-browser/src/app/featured-item/featured-item.component.scss
@@ -36,6 +36,7 @@
   font-size: 64px;
   line-height: 1.25;
   width: 84px;
+  height: 84px;
   background-color: #F7F8F9;
   border-radius: 8px;
   text-align: center;
