update feature details with nav

--- a/apps/clip/src/app/layout/layout.component.scss
+++ b/apps/clip/src/app/layout/layout.component.scss
@@ -30,7 +30,7 @@ mat-form-field {
 
 .layout-route {
   flex: auto;
-  background-color: #f8fafc;
+  background-color: #f2f4f5;
 }
 
 // @media screen and (min-width: 1280px) {
