--- a/apps/clip/src/app/dashboard/dashboard.component.scss
+++ b/apps/clip/src/app/dashboard/dashboard.component.scss
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  background-color: #f2f4f5;
 }
 .dashboard-grid {
   background: transparent;
