--- a/apps/clip/src/styles.scss
+++ b/apps/clip/src/styles.scss
@@ -1,4 +1,5 @@
 @use '@angular/material' as mat;
+@use 'sass:map';
 
 $md-telxl-primary: (
     50 : #e5effb,
@@ -107,7 +108,6 @@ $my-theme: mat.define-light-theme((
 
 $clip-foreground: my-mat-light-theme-foreground(#152536);
 
-$my-theme: map-merge($my-theme, (foreground: $clip-foreground));
 
 @include mat.all-component-themes($my-theme);
 
