--- a/apps/feature-browser/src/app/feature-detail/feature-detail.component.html
+++ b/apps/feature-browser/src/app/feature-detail/feature-detail.component.html
@@ -5,32 +5,57 @@
       <div class="heading-title">
         <div class="feature-name mat-headline-5">{{ feature.name }}</div>
         <div class="feature-version">{{ feature.version }}</div>
+        <div class="feature-actions">
+          <button mat-flat-button color="primary">Install Feature</button>
+        </div>
       </div>
     </div>
-    <mat-tab-group class="tabs" mat-stretch-tabs="false" mat-align-tabs="start">
-      <mat-tab label="Details"> </mat-tab>
-      <mat-tab label="Changelog"> </mat-tab>
-      <mat-tab label="Versions"> </mat-tab>
-    </mat-tab-group>
+
+    <nav
+      mat-tab-nav-bar
+      [tabPanel]="tabPanel"
+      mat-stretch-tabs="false"
+      mat-align-tabs="start"
+      class="tabs"
+    >
+      <a
+        mat-tab-link
+        routerLink="overview"
+        routerLinkActive
+        #rla="routerLinkActive"
+        [active]="rla.isActive"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Overview</a
+      >
+      <a
+        mat-tab-link
+        routerLink="changelog"
+        routerLinkActive
+        #rlaChange="routerLinkActive"
+        [active]="rlaChange.isActive"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Changelog</a
+      >
+      <a
+        mat-tab-link
+        routerLink="components"
+        routerLinkActive
+        #rlaComp="routerLinkActive"
+        [active]="rlaComp.isActive"
+        [routerLinkActiveOptions]="{ exact: true }"
+        >Components</a
+      >
+      <a
+        mat-tab-link
+        routerLink="./versions"
+        routerLinkActive
+        #rlaVer="routerLinkActive"
+        [active]="rlaVer.isActive"
+        >Versions</a
+      >
+    </nav>
   </div>
-  <div class="content">
-    <div class="feature-detail">
-      <p>{{ feature.description }}</p>
-      <div class="flex-spacer"></div>
-    </div>
-    <div class="feature-actions">
-      <h3>Actions</h3>
-      <button mat-flat-button color="primary">Install Feature</button>
-      <mat-divider></mat-divider>
-      <h3>Latest Version</h3>
-      <div class="feature-version">{{ feature.version }}</div>
-      <mat-divider></mat-divider>
-      <h3>Tags</h3>
-      <mat-chip-set>
-        <mat-chip role="listitem" *ngFor="let tag of feature.tags">
-          {{ tag }}</mat-chip
-        >
-      </mat-chip-set>
-    </div>
-  </div>
+  <mat-tab-nav-panel #tabPanel class="content"
+    ><router-outlet></router-outlet
+  ></mat-tab-nav-panel>
 </div>
