--- a/apps/feature-browser/src/app/feature-metric-widget/feature-metric-widget.component.html
+++ b/apps/feature-browser/src/app/feature-metric-widget/feature-metric-widget.component.html
@@ -1,3 +1,5 @@
+<p>Number of features enabled and their curent states</p>
+
 <b>Features: 22</b>
 
 <div style="width: 100%; height: 20px; background-color: rgb(70, 201, 157); margin: 4px 0;"></div>
