--- a/apps/clip/src/app/dashboard/dashboard.component.html
+++ b/apps/clip/src/app/dashboard/dashboard.component.html
@@ -30,9 +30,6 @@
       <span class="flex-spacer"></span>
       <button mat-flat-button (click)="onToggleDesignMode()">Done Editing</button>
       <span class="flex-spacer"></span>
-      <!-- <button mat-icon-button (click)="drawer.toggle()">
-        <mat-icon>add_circle</mat-icon>
-      </button> -->
       <button mat-flat-button (click)="drawer.toggle()">Add Item</button>
     </mat-toolbar>
     <mat-progress-bar
@@ -45,7 +42,7 @@
         [item]="item"
         *ngFor="let item of dashboard"
       >
-        <mat-card class="dashboard-card">
+        <mat-card class="dashboard-card" *ngIf="item['featureWidget'].widget">
           <mat-card-header class="dashboard-card-header">
             <mat-card-title> {{ item['featureWidget'].widget.title }} </mat-card-title>
             <span class="flex-spacer"></span>
@@ -67,6 +64,28 @@
             <clip-widget-proxy
               [featureWidget]="item['featureWidget']"
             ></clip-widget-proxy>
+          </mat-card-content>
+        </mat-card>
+        <mat-card class="dashboard-card" *ngIf="!item['featureWidget'].widget">
+          <mat-card-header class="dashboard-card-header">
+            <mat-card-title> {{ item['featureName'] }} </mat-card-title>
+            <span class="flex-spacer"></span>
+
+            <button mat-icon-button color="accent" class="settings-button">
+              <mat-icon>settings</mat-icon>
+            </button>
+            <button
+              mat-icon-button
+              *ngIf="designMode"
+              color="accent"
+              class="more-button"
+              (click)="removeItem(item)"
+            >
+              <mat-icon>close</mat-icon>
+            </button>
+          </mat-card-header>
+          <mat-card-content class="dashboard-card-content-container">
+            Widget not available!
           </mat-card-content>
         </mat-card>
       </gridster-item>
