--- a/apps/clip/src/app/dashboard/dashboard.component.html
+++ b/apps/clip/src/app/dashboard/dashboard.component.html
@@ -85,7 +85,7 @@
             </button>
           </mat-card-header>
           <mat-card-content class="dashboard-card-content-container">
-            Widget not available!
+            Widget <b>{{ item['widgetName'] }}</b>not available!
           </mat-card-content>
         </mat-card>
       </gridster-item>
