--- a/apps/clip/src/app/dashboard/dashboard.component.html
+++ b/apps/clip/src/app/dashboard/dashboard.component.html
@@ -60,7 +60,7 @@
               <mat-icon>close</mat-icon>
             </button>
           </mat-card-header>
-          <mat-card-content class="dashboard-card-content-container">
+          <mat-card-content class="dashboard-card-content-container scrollbar">
             <clip-widget-proxy
               [featureWidget]="item['featureWidget']"
             ></clip-widget-proxy>
