--- a/apps/agents/src/app/management/agents/agents.component.html
+++ b/apps/agents/src/app/management/agents/agents.component.html
@@ -7,13 +7,15 @@
       </mat-card-content>
     </mat-card>
     <mat-card class="header-card">
-      <mat-card-header><mat-card-title>SLA Trend</mat-card-title></mat-card-header>
+      <mat-card-header
+        ><mat-card-title>SLA Trend</mat-card-title></mat-card-header
+      >
       <mat-card-content>
         <clip-sla-trend></clip-sla-trend>
       </mat-card-content>
     </mat-card>
     <mat-card class="header-card">
-      <mat-card-header><mat-card-title>Logged in trend</mat-card-title></mat-card-header>
+      <mat-card-header><mat-card-title>Logins</mat-card-title></mat-card-header>
       <mat-card-content>
         <clip-logged-in-trend></clip-logged-in-trend>
       </mat-card-content>
@@ -38,6 +40,24 @@
           <ng-container matColumnDef="name">
             <th mat-header-cell *matHeaderCellDef>Name</th>
             <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+          </ng-container>
+
+          <!-- State Column -->
+          <ng-container matColumnDef="state">
+            <th mat-header-cell *matHeaderCellDef>State</th>
+            <td mat-cell *matCellDef="let element">
+              <clip-agent-status-badge
+                [stateName]="element.state"
+              ></clip-agent-status-badge>
+            </td>
+          </ng-container>
+
+          <!-- Team Column -->
+          <ng-container matColumnDef="team">
+            <th mat-header-cell *matHeaderCellDef>Team</th>
+            <td mat-cell *matCellDef="let element">
+              {{ element.team }}
+            </td>
           </ng-container>
 
           <!-- Title Column -->
