--- a/apps/agents/src/app/management/agents/agents.component.scss
+++ b/apps/agents/src/app/management/agents/agents.component.scss
@@ -31,3 +31,13 @@
 .list-card-content {
   overflow-y: auto;
 }
+
+.mat-column-state {
+  width: 120px;
+  max-width: 120px;
+}
+
+.mat-mdc-row:hover .mat-mdc-cell {
+  background-color: #f5f5f5;
+  cursor: pointer;
+}
