fix grey box visible when removing dashboard item

--- a/apps/clip/src/app/dashboard/dashboard.component.html
+++ b/apps/clip/src/app/dashboard/dashboard.component.html
@@ -55,6 +55,7 @@
               *ngIf="designMode"
               color="accent"
               class="more-button"
+              (mousedown)="$event.stopPropagation()" 
               (click)="removeItem(item)"
             >
               <mat-icon>close</mat-icon>
