--- a/apps/feature-browser/src/app/feature-detail/feature-overview/feature-overview.component.html
+++ b/apps/feature-browser/src/app/feature-detail/feature-overview/feature-overview.component.html
@@ -1,4 +1,4 @@
-<div class="content" *ngIf="feature$ | async as feature">
+<div class="content" *ngIf="feature">
     <div class="feature-detail">
       <p>{{ feature.description }}</p>
       <div class="flex-spacer"></div>
